almost all logic

--- a/presentation/src/main/res/layout/activity_door_list.xml
+++ b/presentation/src/main/res/layout/activity_door_list.xml
@@ -9,19 +9,36 @@
             type="ru.mail1998.logunov.maxim.doors.presentation.screens.door_list.DoorListViewModel" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
-        style="@style/AppConstraintLayout">
+    <android.support.constraint.ConstraintLayout style="@style/AppConstraintLayout">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/tool_bar_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/tool_bar"
+                style="@style/AppToolBar"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:titleTextColor="@android:color/white">
+
+            </android.support.v7.widget.Toolbar>
+        </android.support.design.widget.AppBarLayout>
 
         <ImageView
             style="@style/NoInternetIcon"
+            android:layout_marginBottom="8dp"
+            android:contentDescription="@string/sad_face"
             android:visibility="@{!viewModel.isConnected}"
-            app:layout_constraintBottom_toTopOf="@id/message_tv"
+            app:layout_constraintBottom_toTopOf="@+id/message_tv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/message_tv"
-            style="@style/NoInternetText"
+            style="@style/ShowErrorEditText"
+            android:text="@{viewModel.errorMessage}"
             android:visibility="@{!viewModel.isConnected}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -29,12 +46,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+            android:id="@+id/button"
             style="@style/NoInternetButton"
-            android:onClick="@{() -> viewModel.tryAgain()}"
+            android:onClick="@{() -> viewModel.onTryAgainClick()}"
             android:visibility="@{!viewModel.isConnected}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/message_tv" />
+            app:layout_constraintTop_toBottomOf="@+id/message_tv" />
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -50,10 +68,43 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:visibility="@{!viewModel.progressBar &amp;&amp; viewModel.isConnected}"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tool_bar_container" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/shadowColor"
+            android:onClick="@{() -> viewModel.hideImage()}"
+            android:visibility="@{viewModel.showDoor}" />
+
+        <FrameLayout
+            android:layout_width="260dp"
+            android:layout_height="270dp"
+            android:background="@drawable/item_selector"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="@{() -> viewModel.hideImage()}"
+            android:visibility="@{viewModel.showDoor}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-        </android.support.v7.widget.RecyclerView>
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/app_margin"
+                android:contentDescription="@string/door_image"
+                app:imageUrl="@{viewModel.doorUrl}" />
+        </FrameLayout>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
