--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -10,23 +10,31 @@
     </data>
 
 
-    <android.support.constraint.ConstraintLayout
-        style="@style/AppConstraintLayout">
+    <android.support.constraint.ConstraintLayout style="@style/AppConstraintLayout">
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/tool_bar_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/tool_bar"
+                style="@style/AppToolBar"
+                app:titleTextColor="@android:color/white"
+                app:layout_scrollFlags="scroll|snap"/>
+        </android.support.design.widget.AppBarLayout>
 
         <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
             android:id="@+id/wood_doors"
             style="@style/MainScreenTextView"
-            android:clickable="true"
             android:drawableStart="@drawable/wood_door"
-            android:focusable="true"
             android:onClick="@{() -> viewModel.onWoodDoorClick()}"
             android:text="@string/wood_door"
-            android:textColor="@android:color/black" />
+            app:layout_constraintTop_toBottomOf="@+id/tool_bar_container" />
 
         <View
             android:id="@+id/divider1"
             style="@style/Divider"
-            android:background="@android:color/darker_gray"
             app:layout_constraintTop_toBottomOf="@+id/wood_doors" />
 
         <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
@@ -35,13 +43,11 @@
             android:drawableStart="@drawable/metal_door"
             android:onClick="@{() -> viewModel.onMetalDoorClick()}"
             android:text="@string/metal_door"
-            android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@+id/divider1" />
 
         <View
             android:id="@+id/divider2"
             style="@style/Divider"
-            android:background="@android:color/darker_gray"
             app:layout_constraintTop_toBottomOf="@+id/metal_doors" />
 
         <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
@@ -50,13 +56,11 @@
             android:drawableStart="@drawable/map"
             android:onClick="@{() -> viewModel.onMapClick()}"
             android:text="@string/we_on_map"
-            android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
         <View
             android:id="@+id/divider3"
             style="@style/Divider"
-            android:background="@android:color/darker_gray"
             app:layout_constraintTop_toBottomOf="@+id/map" />
 
         <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
@@ -65,10 +69,7 @@
             android:drawableStart="@drawable/info"
             android:onClick="@{() -> viewModel.onInfoClick()}"
             android:text="@string/about_us"
-            android:textColor="@android:color/black"
             app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
     </android.support.constraint.ConstraintLayout>
-
-
 </layout>
