--- a/presentation/src/main/res/layout/item_door.xml
+++ b/presentation/src/main/res/layout/item_door.xml
@@ -11,14 +11,18 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white">
+        android:layout_height="150dp"
+        android:padding="@dimen/app_padding"
+        android:background="@drawable/item_selector">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="65dp"
-            android:layout_height="130dp"
-            app:imageUrl="@{viewModel.imageUrl}" />
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:imageUrl="@{viewModel.imageUrl}"
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/door_image" />
 
         <TextView
             android:id="@+id/textView"
@@ -28,6 +32,7 @@
             android:text="@{viewModel.title}"
             android:textColor="@android:color/black"
             android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="@id/imageView"
             app:layout_constraintStart_toEndOf="@+id/imageView" />
 
         <TextView
@@ -36,13 +41,16 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="@{viewModel.description}"
+            android:textSize="17sp"
+            android:textColor="@color/colorAccent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <View
             style="@style/Divider"
             android:background="@android:color/darker_gray"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
