--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="divider_margin">5dp</dimen>
     <dimen name="text_size">20sp</dimen>
     <dimen name="app_padding">10dp</dimen>
+    <dimen name="app_margin">10dp</dimen>
 </resources>
