--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -34,7 +34,7 @@
         <item name="android:contentDescription">@string/sad_face</item>
     </style>
 
-    <style name="ShowErrorEditText">
+    <style name="ErrorEditText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/text_size</item>
@@ -45,7 +45,8 @@
     <style name="NoInternetButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">10dp</item>
+        <item name="android:padding">@dimen/app_padding</item>
+        <item name="android:textSize">@dimen/smallTextSize</item>
         <item name="android:background">@drawable/button_selector</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:text">@string/try_again</item>
@@ -58,10 +59,28 @@
         <item name="android:background">@color/backgroundColor</item>
     </style>
     
-    <style name="AppToolBar" parent="Base.Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppToolBar">
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">@color/colorPrimary</item>
+    </style>
+
+    <style name="InfoTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingTop">@dimen/app_padding</item>
+        <item name="android:paddingStart">@dimen/app_padding</item>
+        <item name="android:paddingEnd">@dimen/app_padding</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/textColor</item>
+    </style>
+
+    <style name="InfoClickTextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">@dimen/app_padding</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:background">@drawable/item_selector</item>
     </style>
 
 </resources>
