--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 app:layout_scrollFlags="scroll|snap"/>
         </android.support.design.widget.AppBarLayout>
 
-        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
+        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
             android:id="@+id/wood_doors"
             style="@style/MainScreenTextView"
             android:drawableStart="@drawable/wood_door"
@@ -37,7 +37,7 @@
             style="@style/Divider"
             app:layout_constraintTop_toBottomOf="@+id/wood_doors" />
 
-        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
+        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
             android:id="@+id/metal_doors"
             style="@style/MainScreenTextView"
             android:drawableStart="@drawable/metal_door"
@@ -50,7 +50,7 @@
             style="@style/Divider"
             app:layout_constraintTop_toBottomOf="@+id/metal_doors" />
 
-        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
+        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
             android:id="@+id/map"
             style="@style/MainScreenTextView"
             android:drawableStart="@drawable/map"
@@ -63,7 +63,7 @@
             style="@style/Divider"
             app:layout_constraintTop_toBottomOf="@+id/map" />
 
-        <ru.mail1998.logunov.maxim.doors.customView.FixedSizeTextView
+        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeTextView
             android:id="@+id/about_us"
             style="@style/MainScreenTextView"
             android:drawableStart="@drawable/info"
