--- a/presentation/src/main/res/layout/activity_types_list.xml
+++ b/presentation/src/main/res/layout/activity_types_list.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mail1998.logunov.maxim.doors.presentation.screens.type_list.TypesListViewModel" />
+            type="ru.mail1998.logunov.maxim.doors.presentation.screens.type.TypesListViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout style="@style/AppConstraintLayout">
@@ -20,8 +20,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/tool_bar"
                 style="@style/AppToolBar"
-                app:titleTextColor="@android:color/white"
-                app:layout_scrollFlags="scroll|snap"/>
+                app:titleTextColor="@android:color/white"/>
 
         </android.support.design.widget.AppBarLayout>
 
@@ -36,7 +35,7 @@
 
         <TextView
             android:id="@+id/message_tv"
-            style="@style/ShowErrorEditText"
+            style="@style/ErrorEditText"
             android:text="@{viewModel.errorMessage}"
             android:visibility="@{!viewModel.isConnected}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -68,7 +67,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:visibility="@{!viewModel.progressBar &amp;&amp; viewModel.isConnected}"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tool_bar_container" />
 
