--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="text_size">20sp</dimen>
     <dimen name="app_padding">10dp</dimen>
     <dimen name="app_margin">10dp</dimen>
+    <dimen name="smallTextSize">17sp</dimen>
 </resources>
