--- a/presentation/src/main/res/layout/activity_door_list.xml
+++ b/presentation/src/main/res/layout/activity_door_list.xml
@@ -11,22 +11,14 @@
 
     <android.support.constraint.ConstraintLayout style="@style/AppConstraintLayout">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/tool_bar_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/tool_bar"
-                style="@style/AppToolBar"
-                app:titleTextColor="@android:color/white">
-
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.AppBarLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolBar"
+            style="@style/AppToolBar"
+            app:titleTextColor="@android:color/white"/>
 
         <ImageView
             style="@style/NoInternetIcon"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="@dimen/app_margin"
             android:contentDescription="@string/sad_face"
             android:visibility="@{!viewModel.isConnected}"
             app:layout_constraintBottom_toTopOf="@+id/message_tv"
@@ -66,8 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:visibility="@{!viewModel.progressBar &amp;&amp; viewModel.isConnected}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tool_bar_container" />
+            app:layout_constraintTop_toBottomOf="@+id/toolBar" />
 
         <View
             android:layout_width="match_parent"
