--- a/presentation/src/main/res/layout/activity_types_list.xml
+++ b/presentation/src/main/res/layout/activity_types_list.xml
@@ -12,17 +12,10 @@
 
     <android.support.constraint.ConstraintLayout style="@style/AppConstraintLayout">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/tool_bar_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/tool_bar"
-                style="@style/AppToolBar"
-                app:titleTextColor="@android:color/white"/>
-
-        </android.support.design.widget.AppBarLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolBar"
+            style="@style/AppToolBar"
+            app:titleTextColor="@android:color/white"/>
 
         <ImageView
             style="@style/NoInternetIcon"
@@ -46,7 +39,7 @@
         <Button
             style="@style/NoInternetButton"
             android:background="@drawable/button_selector"
-            android:onClick="@{() -> viewModel.tryAgain()}"
+            android:onClick="@{() -> viewModel.tryAgainClick()}"
             android:visibility="@{!viewModel.isConnected}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -68,7 +61,7 @@
             android:layout_height="0dp"
             android:visibility="@{!viewModel.progressBar &amp;&amp; viewModel.isConnected}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tool_bar_container" />
+            app:layout_constraintTop_toBottomOf="@id/toolBar" />
 
     </android.support.constraint.ConstraintLayout>
 
