--- a/presentation/src/main/res/layout/item_door.xml
+++ b/presentation/src/main/res/layout/item_door.xml
@@ -1,56 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
-            type="ru.mail1998.logunov.maxim.doors.presentation.screens.door.DoorItemViewModel"/>
+            type="ru.mail1998.logunov.maxim.doors.presentation.screens.door.DoorItemViewModel" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <ru.mail1998.logunov.maxim.doors.custom.FixedSizeConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:padding="@dimen/app_padding"
-        android:background="@drawable/item_selector">
+        android:layout_height="wrap_content"
+        android:background="@drawable/item_selector"
+        android:padding="@dimen/app_padding">
 
-        <ImageView
+        <ru.mail1998.logunov.maxim.doors.custom.FixedSizeImageView
             android:id="@+id/imageView"
-            android:layout_width="65dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:contentDescription="@string/door_image"
             android:scaleType="centerCrop"
-            app:imageUrl="@{viewModel.imageUrl}"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/door_image" />
+            app:imageUrl="@{viewModel.imageUrl}" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/app_margin"
             android:text="@{viewModel.title}"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            app:layout_constraintTop_toTopOf="@id/imageView"
-            app:layout_constraintStart_toEndOf="@+id/imageView" />
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="@dimen/app_margin"
             android:text="@{viewModel.description}"
-            android:textSize="@dimen/smallTextSize"
             android:textColor="@color/colorAccent"
+            android:textSize="@dimen/smallTextSize"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <View
-            style="@style/Divider"
-            android:background="@android:color/darker_gray"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-    </android.support.constraint.ConstraintLayout>
+    </ru.mail1998.logunov.maxim.doors.custom.FixedSizeConstraintLayout>
 </layout>
