--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="app_padding">10dp</dimen>
     <dimen name="app_margin">10dp</dimen>
     <dimen name="smallTextSize">17sp</dimen>
+    <dimen name="image_margin">40dp</dimen>
 </resources>
