--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -2,8 +2,9 @@
 <resources>
     <dimen name="divider_margin">5dp</dimen>
     <dimen name="text_size">20sp</dimen>
+    <dimen name="small_text_size">17sp</dimen>
+    <dimen name="info_text_size">14sp</dimen>
     <dimen name="app_padding">10dp</dimen>
     <dimen name="app_margin">10dp</dimen>
-    <dimen name="smallTextSize">17sp</dimen>
     <dimen name="image_margin">40dp</dimen>
 </resources>
