--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -52,7 +52,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding">@dimen/app_padding</item>
-        <item name="android:textSize">@dimen/smallTextSize</item>
+        <item name="android:textSize">@dimen/small_text_size</item>
         <item name="android:background">@drawable/button_selector</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:text">@string/try_again</item>
@@ -71,7 +71,7 @@
         <item name="android:paddingTop">@dimen/app_padding</item>
         <item name="android:paddingStart">@dimen/app_padding</item>
         <item name="android:paddingEnd">@dimen/app_padding</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/info_text_size</item>
         <item name="android:textColor">@color/textColor</item>
     </style>
 
