--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -64,5 +64,9 @@
             android:text="@string/about_us"
             app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
+        <View
+            style="@style/Divider"
+            app:layout_constraintTop_toBottomOf="@+id/about_us" />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
