--- a/presentation/src/main/res/layout/activity_door_list.xml
+++ b/presentation/src/main/res/layout/activity_door_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -17,7 +16,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolBar"
             style="@style/AppToolBar"
-            app:titleTextColor="@android:color/white"/>
+            app:titleTextColor="@android:color/white" />
 
         <ImageView
             style="@style/NoInternetIcon"
@@ -61,16 +60,16 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:visibility="@{!viewModel.progressBar &amp;&amp; viewModel.isConnected}"
-            app:layout_constraintTop_toBottomOf="@+id/toolBar"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolBar" />
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/backgroundColor"
             android:visibility="@{viewModel.showDoor}"
-            app:layout_constraintTop_toTopOf="@+id/door_list_rv"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/door_list_rv">
 
             <ProgressBar
                 android:layout_width="wrap_content"
