--- a/presentation/src/main/res/layout/activity_types_list.xml
+++ b/presentation/src/main/res/layout/activity_types_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -64,6 +63,4 @@
             app:layout_constraintTop_toBottomOf="@+id/toolBar" />
 
     </android.support.constraint.ConstraintLayout>
-
-
 </layout>
